			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02g: *********************************

IMP: (02/07/05, DN) Changed implementation of ArcInst and Connection: Connection's fields moved
     to Connection, immutable class EPoint is used for Locations.

IMP/MAN: (02/04/05, SMR) Directional arcs can now have arrow heads on either end. (Bug #150)
     Modified Arc Properties dialog to control directional, negated, and end extension.
     Modified commands in Edit / Arc menu.
     Modified internal way of storing these properties.

IMP: (02/03/05, SMR) Improvements in node extraction.  Added PolyMerge.subtractLayers().

IMP/MAN: (02/04/05, GVG) Reorganizing tech palette including Bug#31
- Added "n"/"p" to well, active and transistors. Added "Mos" to transistors.
Added "Act" to actives. On Y axis, 3-node row (arc, pin, contact) sorted per layer
Done for all layout technologies.

BUG: (02/04/05, DN) Duplicate or rename cells spoils "getInstancesOf" (Bug #192).
FIX: In NodeInst.check add checking of NodeUsage to catch corruption in time.
     In NodeInst.rename use Cell.removeNodeName instead of Cell.removeNode to avoid corruption.

BUG: (02/04/05, DN) User writes corrupted library when invariants are broken (Bug #191).
FIX: In ToolMenu suggest user "ForceQuit" with save in "panic" directory.
     In "Cell.checkInvariants" report only first assert violation message to be less annoying.

IMP: (02/03/05, GVG) Removing extra call in ERC for subMerge trees.

IMP: (02/03/05, GVG) Optimizing usage of memory in sweep algorithm (using ERC as test case).

IMP: (02/03/05, GVG) Change dialog: node names in dialog sorted.

IMP: (02/02/05, GVG) Changes in LayerCoverageJob to allow calls from regression test suite.
Got rid of LayerCoverageJob.listGeometryOnNetworksNoJob and extended LayerCoverageJob.listGeometryOnNetworks.
Added Extraction package in regression test suite (1 script for now).
